--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/divtoko/divtoko/issues"
   },
-  "homepage": "https://github.com/divtoko/divtoko#readme"
+  "homepage": "https://github.com/divtoko/divtoko#readme",
+  "dependencies": {
+    "express": "^4.16.1"
+  }
 }
